fixed line break in table

--- a/src/ui/layouts/common/Table/index.module.scss
+++ b/src/ui/layouts/common/Table/index.module.scss
@@ -52,6 +52,7 @@
 
 .tableTd {
   vertical-align: middle;
+  white-space: nowrap
   // height: 53px !important;
 }
 
